bat.bool1.sumdouble.SumDouble.scala.error
Compilation error:
SumDouble:2: error: type mismatch;
 found   : Unit
 required: Integer
def sumDouble(a: Integer, b: Integer): Integer = {if (a==b) {return (4*a); return(a+b)} 
                                                  ^